fixing invisible logo

--- a/style.css
+++ b/style.css
@@ -8,22 +8,14 @@
     src: url(fonts/SolexMedium.ttf)
 }
 
-.navbar-brand {
-    position: relative;
-    background: url('img/logomain.png') center center;
-    background-repeat: no-repeat;
-    width: 200px;
-    margin-left:50px;
-    margin-right: 50px;
-    background-size: contain;
-}
+
 
 h1 {
-font-family: SolexBlack;
+font-family: SolexBlack, sans-serif;
 }
 
 h2{
-    font-family: SolexRegular;
+    font-family: SolexRegular, sans-serif;
 }
 
 
@@ -39,13 +31,13 @@ h2{
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
 }
 
 .loginmodal-container h1 {
     text-align: center;
     font-size: 1.8em;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
 }
 
 .loginmodal-container input[type=submit] {
@@ -92,12 +84,12 @@ h2{
 
 .loginmodal-submit {
     /* border: 1px solid #3079ed; */
-    border: 0px;
+
     color: #fff;
     text-shadow: 0 1px rgba(0,0,0,0.1);
     background-color: #4d90fe;
-    padding: 17px 0px;
-    font-family: Arial;
+    padding: 17px;
+    font-family: Arial, sans-serif;
     font-size: 14px;
     /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
 }
